# portfolio-optimizer-1

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  heroku.yml  pyproject.toml  requirements.txt
app/: config.py  controller.py
app/client/: av_client.py  coingecko_client.py  retry.py  weisscrypto_client.py
app/controller/: stocks_controller.py
backend/: Makefile  pyproject.toml  requirements.txt
backend/portfolio_optimizer/: app.py  cache.py
backend/portfolio_optimizer/engine/: backtesting.py
backend/portfolio_optimizer/engine/optimizers/: common.py  pca.py
backend/research/: hrp.ipynb
portfolio_optimization/: app.py  config.py  controller.py  guniconf.py  models.py
portfolio_optimization/client/: coingecko_client.py
portfolio_optimization/controller/: crypto_controller.py
portfolio_optimization/engine/: backtesting.py  common.py  monte_carlo.py  pca.py
portfolio_optimization/engine/optimizers/: common.py  monte_carlo.py  pca.py
portfolio_optimization/routes/: api_routes.py  securities_routes.py
portfolio_optimization/utils/: coingecko_retry.py
portfolio_optimizer/: __main__.py  app.py  controller.py  middleware.py
portfolio_optimizer/clients/: yfinance_client.py
portfolio_optimizer/engine/optimizers/: monte_carlo.py
portfolio_optimizer/routes/: api_routes.py  view_routes.py
research/: demo.ipynb  ef.ipynb
