[tool.poetry]
name = "portfolio-optimizer"
version = "0.1.1"
description = "Portfolio Optimizer API"
authors = ["Eugene Serdyuk <eugene.serdyuk@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
pyportfolioopt = "^1.4.2"
scikit-learn = "^0.24.2"
fastapi = "^0.68.0"
yfinance = "^0.1.63"
requests-cache = "^0.7.4"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
seaborn = "^0.11.2"
bt = "^0.2.9"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
